--- a/sahara_dashboard/content/data_processing/clusters/templates/clusters/_details.html
+++ b/sahara_dashboard/content/data_processing/clusters/templates/clusters/_details.html
@@ -52,6 +52,8 @@
     <dd>{{ cluster.user_keypair_id }}</dd>
     <dt>{% trans "Use auto-configuration" %}</dt>
     <dd>{{ cluster.use_autoconfig }}</dd>
+    <dt>{% trans "Protected" %}</dt>
+    <dd>{{ cluster.is_protected|yesno }}</dd>
   </dl>
   <dl class="dl-horizontal">
     <dt>{% trans "Anti-affinity enabled for" %}</dt>
