--- a/sahara_dashboard/content/data_processing/jobs/templates/data_sources/_details.html
+++ b/sahara_dashboard/content/data_processing/jobs/templates/data_sources/_details.html
@@ -14,6 +14,8 @@
     <dd>{{ data_source.url }}</dd>
     <dt>{% trans "Description" %}</dt>
     <dd>{{ data_source.description|default:_("None") }}</dd>
+    <dt>{% trans "Protected" %}</dt>
+    <dd>{{ data_source.is_protected|yesno }}</dd>
     <dt>{% trans "Create time" %}</dt>
     <dd>{{ data_source.created_at|parse_isotime }}</dd>
   </dl>
