--- a/sahara_dashboard/content/data_processing/jobs/templates/job_binaries/_details.html
+++ b/sahara_dashboard/content/data_processing/jobs/templates/job_binaries/_details.html
@@ -12,6 +12,8 @@
     <dd>{{ job_binary.url }}</dd>
     <dt>{% trans "Description" %}</dt>
     <dd>{{ job_binary.description|default:_("None") }}</dd>
+    <dt>{% trans "Protected" %}</dt>
+    <dd>{{ job_binary.is_protected|yesno }}</dd>
     <dt>{% trans "Create time" %}</dt>
     <dd>{{ job_binary.created_at|parse_isotime }}</dd>
   </dl>
