--- a/sahara_dashboard/content/data_processing/jobs/templates/job_templates/_details.html
+++ b/sahara_dashboard/content/data_processing/jobs/templates/job_templates/_details.html
@@ -12,6 +12,8 @@
       <dd>{{ job.type }}</dd>
       <dt>{% trans "Description" %}</dt>
       <dd>{{ job.description|default:_("None") }}</dd>
+      <dt>{% trans "Protected" %}</dt>
+      <dd>{{ job.is_protected|yesno }}</dd>
       <dt>{% trans "Mains" %}</dt>
       {% for main in job.mains %}
         <dd><a href="{% url 'horizon:project:data_processing.jobs:jb-details' main.id  %}">{{ main.name }}</a></dd>
